[BE] fix: login 주석 추가 및 일부 메서드 수정